worked on the search style

--- a/index.html
+++ b/index.html
@@ -8,32 +8,38 @@
     <title>Document</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-     
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <!-- CSS STyle Sheet -->
-     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
+
+
+
 </head>
 
 <body>
 
-        <div class="header"></div>
+    <div class="header"></div>
 
-        <nav class="nav">
-            <a class="nav-link active" href="#">Home</a>
-            <a class="nav-link" href="#">Search Recipes</a>
-            <a class="nav-link" href="#">My Recipes</a>
-          </nav>
+    <nav class="nav">
+        <a class="nav-link active" href="#">Home</a>
+        <a class="nav-link" href="#">Search Recipes</a>
+        <a class="nav-link" href="#">My Recipes</a>
+    </nav>
 
-       <div class="userIcon"><img src="assets/images/user-circle-solid.svg" alt="user-icon"></div>
-
-          
-       <div class="hpLogo"><img src="assets/images/Nom Nom Logo.png" alt="home-logo"></div>
- 
-
-      <button type="button" class="btn btn-primary">Find Noms</button>
+    <div class="userIcon"><img src="assets/images/user-circle-solid.svg" alt="user-icon"></div>
 
 
-    <input type="text" id="general-search">
+    <div class="hpLogo"><img src="assets/images/Nom Nom Logo.png" alt="home-logo"></div>
+
+
+    <button type="button" class="btn btn-primary">Find Noms</button>
+
+
+    <input type="text" id="general-search" name="" placeholder="Search">
+
+
 
     <ul id="search-results">
         <!-- <li>
@@ -49,8 +55,8 @@
     </div>
 
     <footer>
-            <p>Brought to you by SMU Coding Bootcamp Group</p>
-        </footer>
+        <p>Brought to you by SMU Coding Bootcamp Group</p>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
