--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
     <div class="header"></div>
 
-    <nav class="nav">
+    <nav id="sidenav" class="nav">
+        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
         <a class="nav-link active" href="#">Home</a>
         <a class="nav-link" href="#">Search Recipes</a>
         <a class="nav-link" href="#">My Recipes</a>
