working on menu

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 
     <div class="header"></div>
 
-    <nav id="sidenav" class="nav">
-        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
+    <nav id="mysidenav" class="sidenav">
+        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
         <a class="nav-link active" href="#">Home</a>
         <a class="nav-link" href="#">Search Recipes</a>
         <a class="nav-link" href="#">My Recipes</a>
+
     </nav>
 
     <div class="userIcon"><img src="assets/images/user-circle-solid.svg" alt="user-icon"></div>
@@ -290,6 +291,9 @@
         // }).then(function (popular) {
         //     console.log(popular);
         // });
+
+
+
 
     </script>
 
