--- a/index.html
+++ b/index.html
@@ -33,15 +33,16 @@
                       <input type="radio" name="options" id="option2" autocomplete="off"> Browse Recipes
                     </label>
                     <label class="btn btn-secondary">
-                      <input type="radio" name="options" id="option3" autocomplete="off"> Trending Recipes
+                      <input type="radio" name="options" id="option3" autocomplete="off"> General Search
                     </label>
                     
                   </div>
             </div>
         </div>
         <br>
+        <div class="layout-1">
         <div class="container ingredientSearch">
-            <input type="text" class="form-control" id="general-search">
+            <input type="text" class="form-control" id="ingredients-search">
             <button type="button" class="btn btn-dark btn-add">Add</button>
         </div>
 
@@ -65,6 +66,49 @@
                   </div>
                 </div>
               </div>
+            </div>
+
+        <br>
+
+        <div class="layout-2">
+        <div class="container ingredientSearch">
+        </div>
+
+        <br>
+
+        <div class="row justify-content-center">
+                <div class="col-sm-10">
+                  <div class="card cardOne cardTwo">
+                    <div class="card-body">
+                            <ul class="card-text" id="search-results"></ul>
+                      <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+        
+        <br>
+
+        <div class="layout-3">
+        <div class="container generalSearch">
+            <input type="text" class="form-control" id="general-search">
+            <button type="button" class="btn btn-dark btn-add">Add</button>
+        </div>
+
+        <br>
+
+        <div class="row justify-content-center">
+                <div class="col-sm-10">
+                  <div class="card cardOne cardTwo">
+                    <div class="card-body">
+                            <ul class="card-text" id="search-results"></ul>
+                      <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
 
 
 
@@ -77,7 +121,7 @@
     <p>Ingredients List - <span id="ingredientsClear">Clear</span></p>
     <ul id="myIngredients"></ul>
 
-    <p>Search Results</p>
+    <p>Search Results</p> 
     <ul id="search-results">
         <!-- <li>
             <h3>Title</h3>
