updated and added firebase to signup and login htmls

--- a/signup.html
+++ b/signup.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-    <form action="action_page.php" style="border:1px solid #ccc">
+    <form style="border:1px solid #ccc">
         <div class="imgcontainer">
-            <img src="assets/images/Nom Nom Logo.png" alt="Avatar" class="avatar">
+            <img src="assets/images/nom_nom_logo.png" alt="Avatar" class="avatar">
         </div>
         <div class="container">
             <h1>Sign Up</h1>
@@ -47,6 +47,17 @@
             </div>
         </div>
     </form>
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+    <!-- Firebase Core JavaScript Link -->
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
+    <!-- Specific Firebase products we want (Database) -->
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+
+    <script src="assets/js/script.js"></script>
 
 </body>
 
