updates to sign/login

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
     </nav>
 
-    <div class="userIcon"><img src="assets/images/user-circle-solid.svg" alt="user-icon"></div>
+    <a href="login.html">
+        <div class="userIcon"><img src="assets/images/user-circle-solid.svg" alt="user-icon"></div>
+    </a>
 
     <!--static nav bar-->
 
