--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 <body>
     <form method="post">
         <div class="imgcontainer">
-            <img src="assets/images/nom_nom_logo.png" alt="Avatar" class="avatar">
+            <a href="index.html"> <img src="assets/images/nom_nom_logo.png" alt="Avatar" class="avatar"></a>
         </div>
 
         <div class="container">
