--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
 <body>
     <form style="border:1px solid #ccc">
         <div class="imgcontainer">
-            <img src="assets/images/nom_nom_logo.png" alt="Avatar" class="avatar">
+            <a href="index.html"> <img src="assets/images/nom_nom_logo.png" alt="Avatar" class="avatar"></a>
         </div>
         <div class="container">
             <h1>Sign Up</h1>
