--- a/index.html
+++ b/index.html
@@ -30,26 +30,6 @@
 
     <div class="userIcon"><img src="assets/images/user-circle-solid.svg" alt="user-icon"></div>
 
-    <!--static nav bar-->
-
-    <!-- <div class="container">
-        <header>
-            <a href="#"><img class="hpLogo" src="assets/images/nom_nom_logo.png" alt="nomNomLogo" width="87" height="76"
-                    id="Insert_logo" /></a>
-        </header>
-        <div class="btn-group btn-group-toggle" data-toggle="buttons">
-            <label class="btn btn-secondary active">
-                <input type="radio" name="options" id="option1" autocomplete="off" checked> Ingredients Search
-            </label>
-            <label class="btn btn-secondary">
-                <input type="radio" name="options" id="option2" autocomplete="off"> Browse Recipes
-            </label>
-            <label class="btn btn-secondary">
-                <input type="radio" name="options" id="option3" autocomplete="off"> Trending Recipes
-            </label> -->
-
-    <!--static nav bar-->
-
     <div class="container">
         <header>
             <a href="#"><img class="hpLogo" src="assets/images/nom_nom_logo.png" alt="nomNomLogo" width="87" height="76"
@@ -57,33 +37,32 @@
         </header>
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
             <label class="btn btn-secondary active">
-                <input type="radio" name="options" id="option1" autocomplete="off" checked> Ingredients Search
+                <input type="radio" name="options" id="option1" class="option-btn" autocomplete="off" checked>
+                Ingredients Search
             </label>
             <label class="btn btn-secondary">
-                <input type="radio" name="options" id="option2" autocomplete="off"> Browse Recipes
+                <input type="radio" name="options" id="option2" class="option-btn" autocomplete="off"> Browse Recipes
             </label>
             <label class="btn btn-secondary">
-                <input type="radio" name="options" id="option3" autocomplete="off"> General Search
+                <input type="radio" name="options" id="option3" class="option-btn" autocomplete="off"> General Search
             </label>
 
         </div>
     </div>
+
     <br>
-    <div class="layout-1">
+
+    <div class="layout">
         <div class="container ingredientSearch">
             <input type="text" class="form-control" id="ingredients-search">
             <button type="button" class="btn btn-dark btn-add">Add</button>
         </div>
-
-
         <br>
-
         <div class="row">
             <div class="col-sm-6">
                 <div class="card cardOne">
                     <div class="card-body">
-                        <ul class="card-text" id=""></ul>
-                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                        <ul class="card-text" id="ingredientsList"></ul>
                     </div>
                 </div>
             </div>
@@ -91,28 +70,38 @@
                 <div class="card cardTwo">
                     <div class="card-body">
                         <ul class="card-text" id="search-results"></ul>
-                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- <div class="layout-1">
+
+    </div> -->
+
+
+    <script>
+
+        $(".option-btn").on("click", function (e) {
+            e.preventDefault()
+
+        })
+
+
+    </script>
 
     <br>
 
     <div class="layout-2">
         <div class="container ingredientSearch">
         </div>
-
         <br>
-
         <div class="row justify-content-center">
             <div class="col-sm-10">
                 <div class="card cardOne cardTwo">
                     <div class="card-body">
                         <ul class="card-text" id="search-results"></ul>
-                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                     </div>
                 </div>
             </div>
@@ -126,15 +115,12 @@
             <input type="text" class="form-control" id="general-search">
             <button type="button" class="btn btn-dark btn-add">Add</button>
         </div>
-
         <br>
-
         <div class="row justify-content-center">
             <div class="col-sm-10">
                 <div class="card cardOne cardTwo">
                     <div class="card-body">
                         <ul class="card-text" id="search-results"></ul>
-                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                     </div>
                 </div>
             </div>
