got the map to halfway work

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body" id="map">
+                <div class="modal-body" style="position: relative;overflow: hidden;height: 250px;" id="map">
                     ...
                 </div>
                 <div class="modal-footer">
