--- a/login.html
+++ b/login.html
@@ -30,9 +30,8 @@
             <input type="password" placeholder="Enter Password" name="psw" required id="psw">
 
             <button id="login" type="submit">Log in</button>
-            <label>
-                <input type="checkbox" checked="checked" name="remember"> Remember me
-            </label>
+
+            <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
         </div>
 
         <div class="container">
@@ -48,6 +47,7 @@
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <!-- Specific Firebase products we want (Database) -->
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-auth.js"></script>
     <script type="text/javascript"
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBr9Pvzu3IdPGeBUSBN126B2v8fTGfBbww&libraries=places"></script>
     <script src="assets/js/script.js"></script>
