updates tp homepage

--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
         <div class="userIcon"><img src="assets/images/user-circle-solid.svg" alt="user-icon"></div>
     </a>
 
+    <div class="fade-out">
+        <h1>nom nom</h1>
+        <img src="assets/images/nom_nom_logo.png" alt="nomNomLogo" style="width:25%" id="Insert_logo">
+    </div>
+
+    <br>
+
     <div class="container">
-        <header>
-            <a href="#"><img class="hpLogo" src="assets/images/nom_nom_logo.png" alt="nomNomLogo" width="87" height="76"
-                    id="Insert_logo" /></a>
-        </header>
+
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
             <label class="btn btn-secondary active">
                 <input type="radio" name="options" id="option1" class="option-btn" autocomplete="off" checked>
