--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <form method="post">
+    <form method="post" style="border:1px solid #ccc">
         <div class="imgcontainer">
             <a href="index.html"> <img src="assets/images/nom_nom_logo.png" alt="Avatar" class="avatar"></a>
         </div>
