Added ability to sign up/login and adds user id to database

--- a/signup.html
+++ b/signup.html
@@ -17,13 +17,12 @@
 </head>
 
 <body>
-    <form style="border:1px solid #ccc">
+    <form>
         <div class="imgcontainer">
             <a href="index.html"> <img src="assets/images/nom_nom_logo.png" alt="Avatar" class="avatar"></a>
         </div>
         <div class="container">
-            <h1>Sign Up</h1>
-            <p>Please fill in this form to create an account.</p>
+            <h2>Sign Up</h2>
             <hr>
 
             <label for="email"><b>Email</b></label>
@@ -33,15 +32,12 @@
             <input type="password" placeholder="Enter Password" name="psw" required id="psw">
 
             <button type="submit" class="signupbtn">Sign Up</button>
-            <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
-            <label>
-                <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-            </label>
+            <p>Already have an account? <a href="login.html" class="text-dark font-weight-bold">Login</a></p>
+        </div>
 
-            <div class="container">
-                <a href="index.html" class="cancelbtn">Cancel</a>
-            </div>
+        <div class="container">
+            <a href="index.html" class="cancelbtn">Go Back</a>
         </div>
     </form>
 
