--- a/login.html
+++ b/login.html
@@ -23,6 +23,9 @@
         </div>
 
         <div class="container">
+
+            <h2>Login</h2>
+            <hr>
             <label for="email"><b>Email</b></label>
             <input type="text" placeholder="Enter Email" name="email" required id="email">
 
@@ -31,11 +34,11 @@
 
             <button id="login" type="submit">Log in</button>
 
-            <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+            <p>Don't have an account? <a href="signup.html" class="text-dark font-weight-bold">Sign Up</a></p>
         </div>
 
         <div class="container">
-            <a href="index.html" class="cancelbtn">Cancel</a>
+            <a href="index.html" class="cancelbtn">Go Back</a>
         </div>
     </form>
 
