--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             alt="user-icon">
     </div>
 
-    <img class="hpLogo" src="assets/images/nom_nom_logo.png" alt="nomNomLogo" id="nnLogo" />
+    <a href="index.html"><img class="hpLogo" src="assets/images/nom_nom_logo.png" alt="nomNomLogo" id="nnLogo" /></a>
 
     <!-- Fade out logo -->
 
@@ -71,6 +71,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="card cardOne">
+                    <div class="card-header">My Ingredients List</div>
                     <div class="card-body">
                         <ul class="card-text" id="ingredientsList"></ul>
                     </div>
@@ -78,6 +79,7 @@
             </div>
             <div class="col-sm-8">
                 <div class="card cardTwo">
+                    <div class="card-header">Recipe Results</div>
                     <div class="card-body">
                         <ul class="card-text" id="search-results"></ul>
                     </div>
@@ -165,6 +167,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </div>
