--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Locations</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body" style="position: relative;overflow: hidden;height: 250px;" id="map">
+                <div class="modal-body" style="position: relative;overflow: hidden;height: 500px;" id="map">
                     ...
                 </div>
                 <div class="modal-footer">
