Linked browse recipes button

--- a/index.html
+++ b/index.html
@@ -68,21 +68,23 @@
             <button type="button" class="btn btn-dark btn-add">Add</button>
         </div>
         <br>
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="card cardOne">
-                    <div class="card-header">My Ingredients List</div>
-                    <div class="card-body">
-                        <span id="ingredientsClear">Clear</span>
-                        <ul class="card-text" id="ingredientsList"></ul>
+        <div class="container main-container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card cardOne">
+                        <div class="card-header">My Ingredients List</div>
+                        <div class="card-body">
+                            <span id="ingredientsClear">Clear</span>
+                            <ul class="card-text" id="ingredientsList"></ul>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-8">
-                <div class="card cardTwo">
-                    <div class="card-header">Recipe Results</div>
-                    <div class="card-body">
-                        <ul class="card-text" id="ingredient-results"></ul>
+                <div class="col-sm-8">
+                    <div class="card cardTwo">
+                        <div class="card-header">Recipe Results</div>
+                        <div class="card-body">
+                            <ul class="card-text" id="ingredient-results"></ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -93,11 +95,14 @@
         <div class="container browse-recipes">
         </div>
         <br>
-        <div class="row justify-content-center">
-            <div class="col-sm-10">
-                <div class="card cardOne cardTwo">
-                    <div class="card-body">
-                        <ul class="card-text" id="browse-results"></ul>
+
+        <div class="container main-container">
+            <div class="row justify-content-center">
+                <div class="col-sm-10">
+                    <div class="card cardOne cardTwo">
+                        <div class="card-body">
+                            <ul class="card-text" id="browse-results"></ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -109,11 +114,13 @@
             <button type="button" class="btn btn-dark btn-add">Search</button>
         </div>
         <br>
-        <div class="row justify-content-center">
-            <div class="col-sm-10">
-                <div class="card cardOne cardTwo">
-                    <div class="card-body">
-                        <ul class="card-text" id="search-results"></ul>
+        <div class="container main-container">
+            <div class="row justify-content-center">
+                <div class="col-sm-10">
+                    <div class="card cardOne cardTwo">
+                        <div class="card-body">
+                            <ul class="card-text" id="search-results"></ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -122,20 +129,18 @@
 
     <div class="layout-4">
         <br>
-        <div class="row justify-content-center">
-            <div class="col-sm-10">
-                <div class="card cardOne cardTwo">
-                    <div class="card-body">
-                        <ul class="card-text" id="favorite-results"></ul>
+        <div class="container main-container">
+            <div class="row justify-content-center">
+                <div class="col-sm-10">
+                    <div class="card cardOne cardTwo">
+                        <div class="card-body">
+                            <ul class="card-text" id="favorite-results"></ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
-    <p>Browse Recipes</p>
-    <button id="browseButton">Browse</button>
 
     <div id="current-recipe">
         <div id="recipe-details"></div>
