--- a/index.html
+++ b/index.html
@@ -142,15 +142,30 @@
         </div>
     </div>
 
-    <div id="current-recipe">
-        <div id="recipe-details"></div>
+    <div class="ingredients-container">
+        <br>
+        <div class="container main-container">
+            <div class="row justify-content-center">
+                <div class="col-sm-10">
+                    <div class="card cardOne cardTwo">
+                        <div class="card-body">
+                            <div id="current-recipe">
+                                <div id="recipe-details"></div>
 
-        <h3>Instructions:</h3>
-        <div id="instructions"></div>
+                                <h3>Instructions:</h3>
+                                <div id="instructions"></div>
 
-        <h3>Ingredients:</h3>
-        <div id="ingredients"></div>
+                                <h3>Ingredients:</h3>
+                                <div id="ingredients"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+
 
     <div class="modal fade" id="googleModel" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
