fixed search result bug

--- a/index.html
+++ b/index.html
@@ -145,11 +145,19 @@
     <div id="current-recipe">
         <div id="recipe-details"></div>
 
-        <h3>Instructions:</h3>
         <div id="instructions"></div>
 
-        <h3>Ingredients:</h3>
         <div id="ingredients"></div>
+    </div>
+
+    <div class="loader">
+        <div class="pacman">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </div>
 
     <div class="modal fade" id="googleModel" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
