--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="card cardOne">
-                    <div class="card-header">My Ingredients List</div>
+                    <div class="card-header">My Ingredients List<span id="ingredientsClear">Clear</span></div>
                     <div class="card-body">
-                        <span id="ingredientsClear">Clear</span>
                         <ul class="card-text" id="ingredientsList"></ul>
                     </div>
                 </div>
