--- a/index.html
+++ b/index.html
@@ -68,24 +68,28 @@
             <button type="button" class="btn btn-dark btn-add">Add</button>
         </div>
         <br>
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="card cardOne">
-                    <div class="card-header">My Ingredients List<span id="ingredientsClear">Clear</span></div>
-                    <div class="card-body">
-                        <ul class="card-text" id="ingredientsList"></ul>
+        <div class="main-container container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card cardOne">
+                        <div class="card-header ingredient-header">My Ingredients List<span
+                                id="ingredientsClear">Clear</span></div>
+                        <div class="card-body">
+                            <ul class="card-text list-group" id="ingredientsList"></ul>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-8">
                     <div class="card cardTwo">
                         <div class="card-header">Recipe Results</div>
                         <div class="card-body">
-                            <ul class="card-text" id="ingredient-results"></ul>
+                            <ul class="card-text list-group" id="ingredient-results"></ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     </div>
     <div class="layout-2">
@@ -98,7 +102,7 @@
                 <div class="col-sm-10">
                     <div class="card cardOne cardTwo">
                         <div class="card-body">
-                            <ul class="card-text" id="browse-results"></ul>
+                            <ul class="card-text list-group" id="browse-results"></ul>
                         </div>
                     </div>
                 </div>
@@ -116,7 +120,7 @@
                 <div class="col-sm-10">
                     <div class="card cardOne cardTwo">
                         <div class="card-body">
-                            <ul class="card-text" id="search-results"></ul>
+                            <ul class="card-text list-group" id="search-results"></ul>
                         </div>
                     </div>
                 </div>
@@ -131,7 +135,7 @@
                 <div class="col-sm-10">
                     <div class="card cardOne cardTwo">
                         <div class="card-body">
-                            <ul class="card-text" id="favorite-results"></ul>
+                            <ul class="card-text list-group" id="favorite-results"></ul>
                         </div>
                     </div>
                 </div>
@@ -148,8 +152,8 @@
                         <div class="card-body">
                             <div id="current-recipe">
                                 <div id="recipe-details"></div>
-                                <div id="instructions"></div>
                                 <div id="ingredients"></div>
+                                <div id="instructions"></div>
                             </div>
                         </div>
                     </div>
