--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- CSS STyle Sheet -->
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/loaders.css">
 </head>
 
 <body>
@@ -161,6 +162,15 @@
         </div>
     </div>
 
+    <div class="loader">
+        <div class="loader-inner pacman">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
 
 
     <div class="modal fade" id="googleModel" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
