--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
     </div>
 
 
-    <!-- <footer>
+    <footer>
         <p>Brought to you by SMU Coding Bootcamp Group</p>
-    </footer> -->
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
