added headers to div

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             <div class="row justify-content-center">
                 <div class="col-sm-12">
                     <div class="card cardOne cardTwo">
+                        <div class="card-header">Browse for a Recipe</div>
                         <div class="card-body">
                             <ul class="card-text list-group" id="browse-results"></ul>
                         </div>
@@ -120,6 +121,7 @@
             <div class="row justify-content-center">
                 <div class="col-sm-12">
                     <div class="card cardOne cardTwo">
+                        <div class="card-header">Recipe Results</div>
                         <div class="card-body">
                             <ul class="card-text list-group" id="search-results"></ul>
                         </div>
@@ -135,6 +137,7 @@
             <div class="row justify-content-center">
                 <div class="col-sm-12">
                     <div class="card cardOne cardTwo">
+                        <div class="card-header">Details</div>
                         <div class="card-body">
                             <ul class="card-text list-group" id="favorite-results"></ul>
                         </div>
@@ -150,6 +153,7 @@
             <div class="row justify-content-center">
                 <div class="col-sm-12">
                     <div class="card cardOne cardTwo">
+                        <div class="card-header">Details</div>
                         <div class="card-body">
                             <div id="current-recipe">
                                 <div id="recipe-details"></div>
