--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <br>
 
         <div class="container main-container">
-            <div class="row justify-content-center">
+            <div class="row">
                 <div class="col-sm-12">
                     <div class="card cardOne cardTwo">
                         <div class="card-header">Browse for a Recipe</div>
@@ -118,7 +118,7 @@
         </div>
         <br>
         <div class="container main-container">
-            <div class="row justify-content-center">
+            <div class="row">
                 <div class="col-sm-12">
                     <div class="card cardOne cardTwo">
                         <div class="card-header">Recipe Results</div>
@@ -134,7 +134,7 @@
     <div class="layout-4">
         <br>
         <div class="container main-container">
-            <div class="row justify-content-center">
+            <div class="row">
                 <div class="col-sm-12">
                     <div class="card cardOne cardTwo">
                         <div class="card-header">Details</div>
@@ -150,7 +150,7 @@
     <div class="ingredients-container">
         <br>
         <div class="container main-container">
-            <div class="row justify-content-center">
+            <div class="row">
                 <div class="col-sm-12">
                     <div class="card cardOne cardTwo">
                         <div class="card-header">Details</div>
