--- a/login.html
+++ b/login.html
@@ -42,6 +42,10 @@
         </div>
     </form>
 
+    <footer>
+        <p>Brought to you by SMU Coding Bootcamp Group</p>
+    </footer>
+
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
