--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="card cardOne cardTwo">
-                        <div class="card-header">Details</div>
+                        <div class="card-header ingredient-header">Details<span id="favorites-clear">Clear</span></div>
                         <div class="card-body">
                             <ul class="card-text list-group" id="favorite-results"></ul>
                         </div>
